可连openai,但付费,14元100万tokens
可连openai,但付费,14元100万tokens

--- a/main/kimi_api.ipynb
+++ b/main/kimi_api.ipynb
@@ -2945,16 +2945,16 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"chatcmpl-AUSzLo76lvUNTipF1IWiCnqp39Lmz\",\n",
+      "  \"id\": \"chatcmpl-AUU8HfjwchG9KIw540PyoZMhtsRCf\",\n",
       "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1731824635,\n",
+      "  \"created\": 1731829033,\n",
       "  \"model\": \"gpt-3.5-turbo-0125\",\n",
       "  \"choices\": [\n",
       "    {\n",
       "      \"index\": 0,\n",
       "      \"message\": {\n",
       "        \"role\": \"assistant\",\n",
-      "        \"content\": \"{'storyBackground':'在 月光仙子 的神秘森林中，隐藏着一个被称为“月影谷”的幽静地方。这里的树木高耸入云，阳光透过浓密的树叶洒下斑驳的光影，仿佛星星点点的月光在舞动。传说中，这片森林是精灵们聚集的地方，每当夜幕降临，他们会在这里举行神秘的仪式，呼唤自然的力量。然而，近日却传来森林深处发生了异常的消息，一股黑暗的力量正在悄然蔓延。\\n\\n\\n\\n玫瑰公主 是这片森林的守护者，她拥有与花朵溶为一体的魔法能力，可以唤醒任何凋零的生命。得知森林即将陷入黑暗之中，玫瑰公主毅然决定踏上征程，寻找黑暗势力的源头。她穿越茂密的树林，跨过清澈的小溪，来到神秘的月影谷，准备揭开黑暗背后的真相。'}\",\n",
+      "        \"content\": \"{'storyBackground':'在 希尔达大陆 的最北方，有一片神秘的领域——夜空。这个地方充满了无尽的星光和奇异的星云，每当夜幕降临，天空便会化作一片瑰丽的光海。传说中，这片夜空是通往其他世界的桥梁，也是时间之石碎片最有可能隐藏的地方之一。然而，这里也是最不可预测和危险的领域，因为时间的法则在这里完全失效，星辰轨迹变得混乱，空间中充斥着时间的裂隙。\\n\\n星辰旅者 是唯一能在这片混沌的夜空中穿梭的守护者。他是一个神秘的存在，来自遥远的星际，操控着星光的力量，并能借助星辰之力穿越时空。为了寻找时间之石的碎片，星辰旅者接受了召唤，前往夜空深处展开冒险。'}\",\n",
       "        \"refusal\": null\n",
       "      },\n",
       "      \"logprobs\": null,\n",
@@ -2963,8 +2963,8 @@
       "  ],\n",
       "  \"usage\": {\n",
       "    \"prompt_tokens\": 1068,\n",
-      "    \"completion_tokens\": 372,\n",
-      "    \"total_tokens\": 1440,\n",
+      "    \"completion_tokens\": 332,\n",
+      "    \"total_tokens\": 1400,\n",
       "    \"prompt_tokens_details\": {\n",
       "      \"cached_tokens\": 0\n",
       "    },\n",
@@ -3093,18 +3093,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'storyBackground':'在 月光仙子 的神秘森林中，隐藏着一个被称为“月影谷”的幽静地方。这里的树木高耸入云，阳光透过浓密的树叶洒下斑驳的光影，仿佛星星点点的月光在舞动。传说中，这片森林是精灵们聚集的地方，每当夜幕降临，他们会在这里举行神秘的仪式，呼唤自然的力量。然而，近日却传来森林深处发生了异常的消息，一股黑暗的力量正在悄然蔓延。\n",
-      "\n",
-      "\n",
-      "\n",
-      "玫瑰公主 是这片森林的守护者，她拥有与花朵溶为一体的魔法能力，可以唤醒任何凋零的生命。得知森林即将陷入黑暗之中，玫瑰公主毅然决定踏上征程，寻找黑暗势力的源头。她穿越茂密的树林，跨过清澈的小溪，来到神秘的月影谷，准备揭开黑暗背后的真相。'}\n"
+      "{\n",
+      "\"narrator\":\"在星辰旅者行进的道路上，时空错乱，突然出现了一个裂隙，将他带到了峡谷中。\",\n",
+      "\"npcName\":\"星辰旅者\",\n",
+      "\"dialog\":\"You seem quite ambitious, always eager to explore this ancient canyon. But beware, greed can be very dangerous.\",\n",
+      "\"scene\":\"峡谷\",\n",
+      "\"options\":[\n",
+      "        {\"text\":\"有野心的\",\"isCollect\":true,\"nextScene\":2},\n",
+      "        {\"text\":\"复杂的\",\"isCollect\":false},\n",
+      "        {\"text\":\"有充分的\",\"isCollect\":false}\n",
+      "]\n",
+      "}\n"
      ]
     }
    ],
@@ -3115,18 +3121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m previous_response \u001b[38;5;241m=\u001b[39m response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchoices\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmessage\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# 更新data中的messages，添加上一轮对话\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmessages\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mextend([\n\u001b[0;32m      6\u001b[0m     {\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124massistant\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: previous_response\n\u001b[0;32m      9\u001b[0m     },\n\u001b[0;32m     10\u001b[0m     {\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124m基于上述背景续写100字左右的对话，并且对话要自然地嵌入ambitious，与背景故事衔接得当，禁止在对话中提示中文意思，并且说明一下使用什么场景，场景原则上与对话所在场景一致，以及1个正确翻译和两个错误翻译，正确翻译要符合角色设定和背景氛围，角色的话可以从之前的role_messages中选，场景可以从field_messages中选。narrator是进入这个对话前出现的旁白，会告诉你现在的环境以或提示你该做什么。选择正确选项就会跳转到下个场景，我每次提问你续写json都要在上个nextScene的基础加1。示例如下：\u001b[39m\n\u001b[0;32m     14\u001b[0m \n\u001b[0;32m     15\u001b[0m \u001b[38;5;124m{\u001b[39m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnarrator\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m你叫艾尔达，为了探索森林的秘密，你来到了一个古老且神秘的森林\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnpcName\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m森林守护者\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdialog\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m你看起来真是个ambitious的冒险者啊，总想着探索这片古老的森林。但要小心，贪欲可是很危险的。\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscene\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m峡谷\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moptions\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:[\u001b[39m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m有野心的\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misCollect\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:True,\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnextScene\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:0},\u001b[39m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m复杂的\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misCollect\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:False},\u001b[39m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;124m        \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m有充分的\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misCollect\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:False}\u001b[39m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;124m]\u001b[39m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;124m}\u001b[39m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;124m注意：只返回json\u001b[39m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m \u001b[38;5;66;03m# 这里放你的新问题\u001b[39;00m\n\u001b[0;32m     28\u001b[0m     }\n\u001b[0;32m     29\u001b[0m ])\n\u001b[0;32m     31\u001b[0m \u001b[38;5;66;03m# 发送新请求\u001b[39;00m\n\u001b[0;32m     32\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mpost(url, headers\u001b[38;5;241m=\u001b[39mheaders, data\u001b[38;5;241m=\u001b[39mjson\u001b[38;5;241m.\u001b[39mdumps(data)\u001b[38;5;241m.\u001b[39mencode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "\"narrator\":\"在星辰旅者行进的道路上，时空错乱，突然出现了一个裂隙，将他带到了峡谷中。\",\n",
+      "\"npcName\":\"星辰旅者\",\n",
+      "\"dialog\":\"You seem quite ambitious, always eager to explore this ancient canyon. But beware, greed can be very dangerous.\",\n",
+      "\"scene\":\"峡谷\",\n",
+      "\"options\":[\n",
+      "        {\"text\":\"有野心的\",\"isCollect\":true,\"nextScene\":2},\n",
+      "        {\"text\":\"复杂的\",\"isCollect\":false},\n",
+      "        {\"text\":\"有充分的\",\"isCollect\":false}\n",
+      "]\n",
+      "}\n"
      ]
     }
    ],
@@ -3151,9 +3163,9 @@
     "\"dialog\":\"你看起来真是个ambitious的冒险者啊，总想着探索这片古老的森林。但要小心，贪欲可是很危险的。\",\n",
     "\"scene\":\"峡谷\",\n",
     "\"options\":[\n",
-    "        {\"text\":\"有野心的\",\"isCollect\":True,\"nextScene\":0},\n",
-    "        {\"text\":\"复杂的\",\"isCollect\":False},\n",
-    "        {\"text\":\"有充分的\",\"isCollect\":False}\n",
+    "        {\"text\":\"有野心的\",\"isCorrect\":true,\"nextScene\":0},\n",
+    "        {\"text\":\"复杂的\",\"isCorrect\":false},\n",
+    "        {\"text\":\"有充分的\",\"isCorrect\":false}\n",
     "]\n",
     "}\n",
     "注意：只返回json\n",
@@ -3171,62 +3183,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "\"narrator\":'在神秘的月影谷深处，玫瑰公主面对黑暗力量展开了对话。',\n",
-      "\"npcName\":'玫瑰公主',\n",
-      "\"dialog\":\"你看起来真是个ambitious的冒险者啊，总想着解开这片森林的奥秘。但要小心，贪欲可是很危险的。\",\n",
-      "\"scene\":'花田',\n",
-      "\"options\":[\n",
-      "        {\"text\":\"有野心的\",\"isCollect\":true,\"nextScene\":0},\n",
-      "        {\"text\":\"复杂的\",\"isCollect\":false},\n",
-      "        {\"text\":\"有充分的\",\"isCollect\":false}\n",
-      "]\n",
-      "}\n"
+      "{'narrator': '在星辰旅者行进的道路上，时空错乱，突然出现了一个裂隙，将他带到了峡谷中。', 'npcName': '星辰旅者', 'dialog': 'You seem quite ambitious, always eager to explore this ancient canyon. But beware, greed can be very dangerous.', 'scene': '峡谷', 'options': [{'text': '有野心的', 'isCollect': True, 'nextScene': 2}, {'text': '复杂的', 'isCollect': False}, {'text': '有充分的', 'isCollect': False}]}\n"
      ]
     }
    ],
    "source": [
-    "current_data = response[\"choices\"][0][\"message\"][\"content\"]\n",
+    "current_data = json.loads(response[\"choices\"][0][\"message\"][\"content\"])\n",
     "print(current_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scenes_all = [] # 存放结果"
+    "scenes_all = [] # 存放结果\n",
+    "role_message = [\n",
+    "    {\"name\": \"月光仙子\", \"avatar\": \"/videos/LunaFairy.png\"},\n",
+    "    {\"name\": \"森林守护者\", \"avatar\": \"ForestGuardian.png\"},\n",
+    "    {\"name\": \"智慧老人\", \"avatar\": \"WiseOldMan.png\"},\n",
+    "    {\"name\": \"星辰旅者\", \"avatar\": \"StarTraveler.png\"},\n",
+    "    {\"name\": \"玫瑰公主\", \"avatar\": \"RosePrincess.png\"},\n",
+    "    {\"name\": \"风语者\", \"avatar\": \"WhisperingWind.png\"},\n",
+    "    {\"name\": \"梦境行者\", \"avatar\": \"DreamWalker.png\"},\n",
+    "    {\"name\": \"魔法猫咪\", \"avatar\": \"MagicKitten.png\"},\n",
+    "    {\"name\": \"时间守护者\", \"avatar\": \"TimeKeeper.png\"},\n",
+    "    {\"name\": \"水晶精灵\", \"avatar\": \"CrystalSprite.png\"},\n",
+    "    {\"name\": \"火焰骑士\", \"avatar\": \"FlameKnight.png\"},\n",
+    "    {\"name\": \"寒冰巫师\", \"avatar\": \"IceWizard.png\"},\n",
+    "    {\"name\": \"云游诗人\", \"avatar\": \"WanderingPoet.png\"},\n",
+    "    {\"name\": \"翠绿女巫\", \"avatar\": \"EmeraldWitch.png\"},\n",
+    "    {\"name\": \"金羽毛勇士\", \"avatar\": \"GoldenFeatherWarrior.png\"}\n",
+    "  ]\n",
+    "\n",
+    "field_message = [\n",
+    "    {\"field\": \"岛屿\", \"video\": \"island.mp4\"},\n",
+    "    {\"field\": \"森林\", \"video\": \"forest.mp4\"},\n",
+    "    {\"field\": \"山脉\", \"video\": \"mountain.mp4\"},\n",
+    "    {\"field\": \"沙漠\", \"video\": \"desert.mp4\"},\n",
+    "    {\"field\": \"城市\", \"video\": \"city.mp4\"},\n",
+    "    {\"field\": \"湖泊\", \"video\": \"lake.mp4\"},\n",
+    "    {\"field\": \"极地\", \"video\": \"polar.mp4\"},\n",
+    "    {\"field\": \"海底\", \"video\": \"ocean_floor.mp4\"},\n",
+    "    {\"field\": \"草原\", \"video\": \"grassland.mp4\"},\n",
+    "    {\"field\": \"夜空\", \"video\": \"night_sky.mp4\"},\n",
+    "    {\"field\": \"火山\", \"video\": \"volcano.mp4\"},\n",
+    "    {\"field\": \"瀑布\", \"video\": \"waterfall.mp4\"},\n",
+    "    {\"field\": \"古堡\", \"video\": \"castle.mp4\"},\n",
+    "    {\"field\": \"峡谷\", \"video\": \"canyon.mp4\"},\n",
+    "    {\"field\": \"花田\", \"video\": \"flower_field.mp4\"}\n",
+    "  ]\n",
+    "\n",
+    "def get_avatar_by_name(name):\n",
+    "    role_message = [\n",
+    "    {\"name\": \"月光仙子\", \"avatar\": \"/avatars/LunaFairy.png\"},\n",
+    "    {\"name\": \"森林守护者\", \"avatar\": \"/avatars/ForestGuardian.png\"},\n",
+    "    {\"name\": \"智慧老人\", \"avatar\": \"/avatars/WiseOldMan.png\"},\n",
+    "    {\"name\": \"星辰旅者\", \"avatar\": \"/avatars/StarTraveler.png\"},\n",
+    "    {\"name\": \"玫瑰公主\", \"avatar\": \"/avatars/RosePrincess.png\"},\n",
+    "    {\"name\": \"风语者\", \"avatar\": \"/avatars/WhisperingWind.png\"},\n",
+    "    {\"name\": \"梦境行者\", \"avatar\": \"/avatars/DreamWalker.png\"},\n",
+    "    {\"name\": \"魔法猫咪\", \"avatar\": \"/avatars/MagicKitten.png\"},\n",
+    "    {\"name\": \"时间守护者\", \"avatar\": \"/avatars/TimeKeeper.png\"},\n",
+    "    {\"name\": \"水晶精灵\", \"avatar\": \"/avatars/CrystalSprite.png\"},\n",
+    "    {\"name\": \"火焰骑士\", \"avatar\": \"/avatars/FlameKnight.png\"},\n",
+    "    {\"name\": \"寒冰巫师\", \"avatar\": \"/avatars/IceWizard.png\"},\n",
+    "    {\"name\": \"云游诗人\", \"avatar\": \"/avatars/WanderingPoet.png\"},\n",
+    "    {\"name\": \"翠绿女巫\", \"avatar\": \"/avatars/EmeraldWitch.png\"},\n",
+    "    {\"name\": \"金羽毛勇士\", \"avatar\": \"/avatars/GoldenFeatherWarrior.png\"}\n",
+    "  ]\n",
+    "    try:\n",
+    "        return next(item[\"avatar\"] for item in role_message if item[\"name\"] == name)\n",
+    "    except StopIteration:\n",
+    "        return None  # 如果没找到对应的name，返回None\n",
+    "\n",
+    "# 使用示例\n",
+    "avatar = get_avatar_by_name(\"梦境行者\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "scenes_all.append({\n",
-    "  \"narrator\":str(),\n",
-    "  \"npcName\": \"月光仙子\",\n",
-    "  \"npcDialog\": \"在这片神秘的岛屿上，每当夜幕降临，月光就会以奇妙的方式照耀大地。你是否愿意解开这里的谜团？或许你会发现岛屿背后隐藏着更深的故事。\",\n",
-    "  \"npcAvatar\": \"/avatars/LunaFairy.png\",\n",
-    "  \"backgroundVideo\": \"/videos/island.mp4\",\n",
+    "  \"narrator\":str(current_data['narrator']),\n",
+    "  \"npcName\": str(current_data['npcName']),\n",
+    "  \"npcDialog\": str(current_data['dialog']),\n",
+    "  \"npcAvatar\": str(get_avatar_by_name(current_data['npcName'])),\n",
+    "  \"backgroundVideo\": \"/videos/2077.mp4\",\n",
     "  \"vocabulary\": {\n",
     "    \"word\": \"mysterious\",\n",
-    "    \"options\": [\n",
-    "      { \"text\": \"神秘\", \"isCorrect\": True, \"nextScene\": 2 },\n",
-    "      { \"text\": \"晴朗\", \"isCorrect\": False, \"nextScene\": 2 },\n",
-    "      { \"text\": \"欢乐\", \"isCorrect\": False, \"nextScene\": 2 }\n",
-    "    ]\n",
+    "    \"options\": current_data['options']\n",
     "  }\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'narrator': '在星辰旅者行进的道路上，时空错乱，突然出现了一个裂隙，将他带到了峡谷中。', 'npcName': '星辰旅者', 'npcDialog': 'You seem quite ambitious, always eager to explore this ancient canyon. But beware, greed can be very dangerous.', 'npcAvatar': '/avatars/StarTraveler.png', 'backgroundVideo': '/videos/2077.mp4', 'vocabulary': {'word': 'mysterious', 'options': [{'text': '有野心的', 'isCollect': True, 'nextScene': 2}, {'text': '复杂的', 'isCollect': False}, {'text': '有充分的', 'isCollect': False}]}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scenes_all)"
    ]
   },
   {
