新增将文件存进指定目录
新增将文件存进指定目录

--- a/main/qiniu_yun_upload.ipynb
+++ b/main/qiniu_yun_upload.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,9 +73,9 @@
      "output_type": "stream",
      "text": [
       "Upload Success!\n",
-      "File Key: words.xlsx\n",
+      "File Key: video/words.xlsx\n",
       "Hash: FjV7HSXXJv5Za-_aOJq0gMKsYfcq\n",
-      "Public Link: http://docu-assist.qiniudn.com/words.xlsx\n"
+      "Public Link: http://docu-assist.qiniudn.com/video/words.xlsx\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
     "# 上传文件\n",
     "try:\n",
     "    # 调用put_file方法，传入Token，要上传的文件路径，上传到七牛云的文件名\n",
-    "    ret, info = put_file(token, key=file_name, file_path=localfile)\n",
+    "    ret, info = put_file(token, key=f'video/{file_name}', file_path=localfile)\n",
     "    print(\"Upload Success!\")  # 上传成功提示\n",
     "    print(\"File Key: \" + ret['key'])  # 打印文件在七牛云的key\n",
     "    print(\"Hash: \" + ret['hash'])  # 打印文件的hash值\n",
