支持上传带文件夹
支持上传带文件夹

--- a/main/qiniu_yun_upload.ipynb
+++ b/main/qiniu_yun_upload.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
       "Upload Success!\n",
       "File Key: video/words.xlsx\n",
       "Hash: FjV7HSXXJv5Za-_aOJq0gMKsYfcq\n",
-      "Public Link: http://docu-assist.qiniudn.com/video/words.xlsx\n"
+      "Public Link: http://snjxzerf4.hn-bkt.clouddn.com/video/video/words.xlsx\n"
      ]
     }
    ],
@@ -117,8 +117,8 @@
     "# 注意：下面的代码应该放在try块内，仅在上传成功时执行\n",
     "if 'ret' in locals() and ret:  # 确保上传成功并且ret变量存在\n",
     "    file_key = ret['key']  # 上传后七牛云返回的文件名\n",
-    "    base_url = 'http://' + bucket_name + '.qiniudn.com'  # 七牛云的默认域名\n",
-    "    link = base_url + '/' + file_key  # 构造完整的文件外链\n",
+    "    base_url = 'http://snjxzerf4.hn-bkt.clouddn.com/'  # 七牛云的默认域名\n",
+    "    link = base_url + file_key  # 构造完整的文件外链\n",
     "    print(\"Public Link: \" + link)  # 打印文件的公开外链"
    ]
   },
