新建游戏区/前后端联调创建应用成功
新建游戏区/前后端联调创建应用成功

--- a/main/qiniu_yun_upload.ipynb
+++ b/main/qiniu_yun_upload.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
       "Upload Success!\n",
       "File Key: video/words.xlsx\n",
       "Hash: FjV7HSXXJv5Za-_aOJq0gMKsYfcq\n",
-      "Public Link: http://snjxzerf4.hn-bkt.clouddn.com/video/video/words.xlsx\n"
+      "Public Link: http://snjxzerf4.hn-bkt.clouddn.com/video/words.xlsx\n"
      ]
     }
    ],
