--- a/test.ipynb
+++ b/test.ipynb
@@ -41,6 +41,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: python-dotenv in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (1.0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install python-dotenv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "postgres://user:password@localhost:5432/mydatabase\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# 加载.env文件\n",
+    "load_dotenv()\n",
+    "\n",
+    "# 获取环境变量\n",
+    "database_url = os.getenv('DATABASE_URL')\n",
+    "print(str(database_url))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
