更换智谱ai接口版本
更换智谱ai接口版本

--- a/test.ipynb
+++ b/test.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,6 +80,23 @@
     "# 获取环境变量\n",
     "database_url = os.getenv('DATABASE_URL')\n",
     "print(str(database_url))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip freeze > requirements.txt"
    ]
   },
   {
