--- a/main/install_all.ipynb
+++ b/main/install_all.ipynb
@@ -57,6 +57,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: flask-jwt-extended in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (4.7.1)\n",
+      "Requirement already satisfied: Werkzeug>=0.14 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from flask-jwt-extended) (3.0.5)\n",
+      "Requirement already satisfied: Flask<4.0,>=2.0 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from flask-jwt-extended) (3.0.3)\n",
+      "Requirement already satisfied: PyJWT<3.0,>=2.0 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from flask-jwt-extended) (2.8.0)\n",
+      "Requirement already satisfied: Jinja2>=3.1.2 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from Flask<4.0,>=2.0->flask-jwt-extended) (3.1.4)\n",
+      "Requirement already satisfied: itsdangerous>=2.1.2 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from Flask<4.0,>=2.0->flask-jwt-extended) (2.2.0)\n",
+      "Requirement already satisfied: click>=8.1.3 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from Flask<4.0,>=2.0->flask-jwt-extended) (8.1.7)\n",
+      "Requirement already satisfied: blinker>=1.6.2 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from Flask<4.0,>=2.0->flask-jwt-extended) (1.8.2)\n",
+      "Requirement already satisfied: importlib-metadata>=3.6.0 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from Flask<4.0,>=2.0->flask-jwt-extended) (8.5.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from Werkzeug>=0.14->flask-jwt-extended) (3.0.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\17728\\appdata\\roaming\\python\\python39\\site-packages (from click>=8.1.3->Flask<4.0,>=2.0->flask-jwt-extended) (0.4.6)\n",
+      "Requirement already satisfied: zipp>=3.20 in d:\\2024秋招-大四上\\conda_env\\lib\\site-packages (from importlib-metadata>=3.6.0->Flask<4.0,>=2.0->flask-jwt-extended) (3.20.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install flask-jwt-extended"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
